visualize two-agent hloc in ri

--- a/viz3d.ipynb
+++ b/viz3d.ipynb
@@ -26,11 +26,11 @@
     "from open3d.web_visualizer import draw\n",
     "\n",
     "DATAROOT = '/data2/sgslam/scans'\n",
-    "SRC_SCAN = 'vins_reverse_loop'\n",
-    "REF_SCAN = 'vins_reverse_loop'\n",
-    "SRC_FRAME = 'frame-000880'\n",
-    "REF_FRAME = 'frame-000110'\n",
-    "PRED_FOLDER = '/data2/sfm/single_session'\n",
+    "SRC_SCAN = 'uc0150_00'\n",
+    "REF_SCAN = 'uc0150_01'\n",
+    "SRC_FRAME = 'frame-000050'\n",
+    "REF_FRAME = 'frame-000000'\n",
+    "PRED_FOLDER = '/data2/sfm/multi_agent'\n",
     "\n",
     "src_depth_p = os.path.join(DATAROOT, SRC_SCAN, 'depth', SRC_FRAME+'.png')\n",
     "ref_depth_p = os.path.join(DATAROOT, REF_SCAN, 'depth', REF_FRAME+'.png')"
@@ -78,7 +78,8 @@
     "from ri_looper import  read_loop_transformations\n",
     "src_pose_f = os.path.join(DATAROOT, SRC_SCAN, 'pose', SRC_FRAME+'.txt')\n",
     "ref_pose_f = os.path.join(DATAROOT, REF_SCAN, 'pose', REF_FRAME+'.txt')\n",
-    "pred_pose_f = os.path.join(PRED_FOLDER, SRC_SCAN, 'pnp', SRC_FRAME+'.txt')\n",
+    "scene_pair = '{}-{}'.format(SRC_SCAN,REF_SCAN)\n",
+    "pred_pose_f = os.path.join(PRED_FOLDER, scene_pair, 'pnp', SRC_FRAME+'.txt')\n",
     "frame_pairs, poses = read_loop_transformations(pred_pose_f)\n",
     "T_src = np.loadtxt(src_pose_f) # T_w_src\n",
     "T_ref = np.loadtxt(ref_pose_f) # T_w_ref\n",
